se crea el modulo shared para compartir librerias de angular a los componentes dashboard y navbar

--- a/src/app/dashboard/components/toolbar/toolbar.component.html
+++ b/src/app/dashboard/components/toolbar/toolbar.component.html
@@ -1,1 +1,11 @@
-<p>toolbar works!</p>
+<header>
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <span>ACADEMIA APP</span>
+        <span class="example-spacer"></span>
+        <button mat-icon-button class="example-icon" (click)="menu.emit()" aria-label="Example icon-button with menu icon">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </mat-toolbar-row>
+    </mat-toolbar>
+  </header>
