Se completa la sidenav con la lista de opciones

--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -1,5 +1,28 @@
 <p>Auto-resizing sidenav</p>
+<mat-list>
+    <mat-list-item class="opcion-item">
+        <mat-icon matListItemIcon>home</mat-icon>
+        <span>HOME</span>
+      </mat-list-item>
+      <mat-list-item  class="opcion-item">
+        <mat-icon matListItemIcon>group</mat-icon>
+        <span  >ALUMNOS</span>
+      </mat-list-item>
+      <mat-list-item class="opcion-item">
+        <mat-icon matListItemIcon>stars</mat-icon>
+        <span >CURSOS</span>
+      </mat-list-item>
+      <mat-list-item  class="opcion-item">
+        <mat-icon matListItemIcon>group</mat-icon>
+        <span  >PROFESORES</span>
+      </mat-list-item>
+      <mat-list-item class="opcion-item">
+        <mat-icon matListItemIcon>event_available</mat-icon>
+        <span >CLASES</span>
+      </mat-list-item>
+</mat-list>
 <button mat-raised-button>
+    <mat-icon>logout</mat-icon>
     CERRAR SESION
 </button>
 
