Se crea carpeta pages con modulos home, alumnos y cursos

--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<p>Auto-resizing sidenav</p>
+<p class="title-opciones">MENU DE OPCIONES</p>
 <mat-list>
     <mat-list-item class="opcion-item">
         <mat-icon matListItemIcon>home</mat-icon>
