--- a/src/app/dashboard/components/sidebar/sidebar.component.scss
+++ b/src/app/dashboard/components/sidebar/sidebar.component.scss
@@ -1,8 +1,12 @@
+.title-opciones{
+  text-align: center;
+  font-weight: 700;
+}
 mat-list{
     .opcion-item{
       cursor: pointer;
     }
     span{
-      font-weight: 700;
+      font-weight: 500;
     }
 }
