Se agregan exportan los componentes de pages al Dashboard.module

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
     <!-- Contenedor que muestra tablas -->
           <div class="example-sidenav-content" #idDiv>
             <!-- AQUI VA EL CONTENIDO PAGES -->       
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <app-home></app-home>
           </div>
     </mat-drawer-container>
 
