Se configuran las rutas para los botones del sidebar

--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -1,14 +1,14 @@
 <p class="title-opciones">MENU DE OPCIONES</p>
 <mat-list>
-    <mat-list-item class="opcion-item">
+    <mat-list-item routerLink="home" class="opcion-item">
         <mat-icon matListItemIcon>home</mat-icon>
         <span>HOME</span>
       </mat-list-item>
-      <mat-list-item  class="opcion-item">
+      <mat-list-item routerLink="alumnos"  class="opcion-item">
         <mat-icon matListItemIcon>group</mat-icon>
         <span  >ALUMNOS</span>
       </mat-list-item>
-      <mat-list-item class="opcion-item">
+      <mat-list-item routerLink="cursos" class="opcion-item">
         <mat-icon matListItemIcon>stars</mat-icon>
         <span >CURSOS</span>
       </mat-list-item>
