--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,12 +7,13 @@
             <mat-icon class="close-icon"  type="button" mat-button
               >arrow_forward</mat-icon> 
             </button>
+            <!-- Aqui va el sidebar con el menu de opciones -->
       <app-sidebar></app-sidebar>
     </mat-drawer>
-    <!-- Contenedor que muestra tablas -->
+    <!-- Contenedor de listado de alumnos, cursos, profesores, inscripcione -->
           <div class="example-sidenav-content" #idDiv>
             <!-- AQUI VA EL CONTENIDO PAGES -->       
-            <app-home></app-home>
+            <router-outlet></router-outlet>
           </div>
     </mat-drawer-container>
 
