--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -12,9 +12,9 @@
         <mat-icon matListItemIcon>stars</mat-icon>
         <span >CURSOS</span>
       </mat-list-item>
-      <mat-list-item  class="opcion-item">
+      <mat-list-item routerLink="profesores"  class="opcion-item">
         <mat-icon matListItemIcon>group</mat-icon>
-        <span  >PROFESORES</span>
+        <span>PROFESORES</span>
       </mat-list-item>
       <mat-list-item class="opcion-item">
         <mat-icon matListItemIcon>event_available</mat-icon>
