--- a/src/app/dashboard/pages/cursos/cursos-listado/cursos-listado.component.html
+++ b/src/app/dashboard/pages/cursos/cursos-listado/cursos-listado.component.html
@@ -1,1 +1,47 @@
-<p>cursos-listado works!</p>
+<table  mat-table [dataSource]="listaCursos" class="mat-table mat-elevation-z8" matSort>
+
+    <!-- id Column -->
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> Id </th>
+        <td mat-cell *matCellDef="let curso"> {{curso.id}} </td>
+    </ng-container>
+
+    <!-- fullname Column -->
+    <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef> NOMBRE CURSO </th>
+        <td mat-cell *matCellDef="let curso"> {{curso.nombre }} </td>
+    </ng-container>
+
+
+    <!-- email Column -->
+    <ng-container matColumnDef="fechaInicio">
+        <th mat-header-cell *matHeaderCellDef> FECHA INICIAL </th>
+        <td mat-cell *matCellDef="let curso"> {{curso.fechaInicio | date: 'MMM d, y'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="fechaFin">
+        <th mat-header-cell *matHeaderCellDef> FECHA FIN</th>
+        <td mat-cell *matCellDef="let curso"> {{curso.fechaFin | date: 'MMM d, y'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="estado">
+        <th mat-header-cell *matHeaderCellDef> ESTADO</th>
+        <td mat-cell *matCellDef="let curso"> {{curso.estado}} </td>
+    </ng-container>
+
+    <!-- events Column -->
+    <ng-container matColumnDef="opciones" >
+        <th mat-header-cell *matHeaderCellDef>ACCIONES</th>
+        <td mat-cell *matCellDef="let curso" class="acciones">
+            <button mat-icon-button (click)="editarCurso.emit(curso)">
+                <mat-icon color="warn">edit</mat-icon>
+            </button>
+            <button mat-icon-button (click)="eliminarCurso.emit(curso.id)">
+                <mat-icon color="warn">delete</mat-icon></button>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+</table>
+
