Se configuran las rutas del dashboard con lazy-loading

--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -16,9 +16,9 @@
         <mat-icon matListItemIcon>group</mat-icon>
         <span>PROFESORES</span>
       </mat-list-item>
-      <mat-list-item class="opcion-item">
+      <mat-list-item routerLink="inscripciones" class="opcion-item">
         <mat-icon matListItemIcon>event_available</mat-icon>
-        <span >CLASES</span>
+        <span >INSCRIPCIONES</span>
       </mat-list-item>
 </mat-list>
 <button mat-raised-button>
