--- a/src/app/dashboard/pages/cursos/cursos.component.html
+++ b/src/app/dashboard/pages/cursos/cursos.component.html
@@ -1,7 +1,7 @@
 
 <button (click)="agregarCurso()" mat-flat-button color="accent" class="mb-3">
     <mat-icon >add</mat-icon>
-    Agregar Curso
+    AGREGAR CURSO
 </button>
 
 <app-cursos-listado
