--- a/src/app/dashboard/components/toolbar/toolbar.component.html
+++ b/src/app/dashboard/components/toolbar/toolbar.component.html
@@ -1,6 +1,9 @@
 <header>
     <mat-toolbar color="primary">
       <mat-toolbar-row>
+        <mat-icon style="font-size: 40px; height: 40px; width: 40px;">
+          rocket_launch
+        </mat-icon>
         <span>ACADEMIA APP</span>
         <span class="example-spacer"></span>
         <button mat-icon-button class="example-icon" (click)="menu.emit()" aria-label="Example icon-button with menu icon">
