--- a/src/app/dashboard/pages/alumnos/components/alumnos-listado/alumnos-listado.component.html
+++ b/src/app/dashboard/pages/alumnos/components/alumnos-listado/alumnos-listado.component.html
@@ -1,1 +1,37 @@
-<p>alumnos-listado works!</p>
+<table mat-table [dataSource]="dataAlumnos" class=" mat-table mat-elevation-z8" matSort>
+
+    <!-- id Column -->
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> Id </th>
+        <td mat-cell *matCellDef="let alumno"> {{alumno.id}} </td>
+    </ng-container>
+
+    <!-- fullname Column -->
+    <ng-container matColumnDef="fullName">
+        <th mat-header-cell *matHeaderCellDef> Nombre Completo</th>
+        <td mat-cell *matCellDef="let alumno"> {{alumno | fullName:'uppercase'}} </td>
+    </ng-container>
+
+
+    <!-- email Column -->
+    <ng-container matColumnDef="correo">
+        <th mat-header-cell *matHeaderCellDef> Correo </th>
+        <td mat-cell *matCellDef="let alumno"> {{alumno.correo}} </td>
+    </ng-container>
+
+    <!-- events Column -->
+    <ng-container matColumnDef="opciones" >
+        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let alumno" class="acciones">
+            <button mat-icon-button (click)="editAlumno.emit(alumno)">
+                <mat-icon color="warn">edit</mat-icon>
+            </button>
+            <button mat-icon-button (click)="deleteAlumno.emit(alumno.id)">
+                <mat-icon color="warn">delete</mat-icon></button>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+</table>
