--- a/src/app/dashboard/pages/profesores/components/profesores-listado/profesores-listado.component.html
+++ b/src/app/dashboard/pages/profesores/components/profesores-listado/profesores-listado.component.html
@@ -21,7 +21,7 @@
     <ng-container matColumnDef="events">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let profesor" class="acciones" >
-            <button mat-icon-button (click)="editProfesor.emit(profesor.id)">
+            <button mat-icon-button (click)="editProfesor.emit(profesor)">
                 <mat-icon color="warn">edit</mat-icon>
             </button>
             <button mat-icon-button (click)="deleteProfesor.emit(profesor.id)">
