Se crea el service de los alumnos

--- a/src/app/dashboard/pages/alumnos/alumnos.component.html
+++ b/src/app/dashboard/pages/alumnos/alumnos.component.html
@@ -3,4 +3,6 @@
     INSCRIBIR ALUMNO
 </button>
 <app-alumnos-listado
-[dataAlumnos]="listado"></app-alumnos-listado>
+[dataAlumnos]="(listado$ | async) || []"
+(editAlumno)="editarAlumno($event)"
+(deleteAlumno)="eliminarAlumno($event)"></app-alumnos-listado>
