--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,30 +1,30 @@
-<div class="container-container">
+<div class="container-title">
+  <h1 class="title">MY LOGIN</h1>
 
-    <div class="container-title">
-      <h1 class="title">MY LOGIN</h1>
-      
-    </div>
-    
-    <form [formGroup]="loginForm" class="card">
-      <div >
-        <mat-form-field class="w-100">
-        <mat-label>Email</mat-label>
-        <input formControlName="correo" matInput type="email" />
-        <mat-error>
-          {{loginForm.get('correo')?.errors|formErrors}}
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field class="w-100">
-        <mat-label>Password</mat-label>
-        <input formControlName="password" matInput type="password" />
-        <mat-error>
-          {{loginForm.get('password')?.errors|formErrors}}
-        </mat-error>
-      </mat-form-field>
-    </div>
-  </form>
-  <button (click)="login()"  mat-flat-button color="warn" class="w-100 btn-login">
-    INGRESAR
-  </button>
-  
+</div>
+
+<form [formGroup]="loginForm" class="card">
+  <div>
+    <mat-form-field class="w-100">
+      <mat-label>Email</mat-label>
+      <input formControlName="correo" matInput type="email" />
+      <mat-error>
+        {{correoControl.errors|formErrors}}
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field class="w-100">
+      <mat-label>Password</mat-label>
+      <input matInput  [type]="hide ? 'password' : 'text'" formControlName="password">
+      <mat-error> {{ passwordControl.errors | formErrors }}</mat-error>
+      <button mat-icon-button matSuffix [attr.aria-label]="hide ? 'Show password' : 'Hide password'" (click)="hide = !hide">
+          <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+        </button> 
+    </mat-form-field>
+   
   </div>
+</form>
+<button (click)="login()" mat-flat-button color="warn" class="w-100 btn-login">
+  INGRESAR
+</button>
+  
+
