--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -21,7 +21,7 @@
         <span >INSCRIPCIONES</span>
       </mat-list-item>
 </mat-list>
-<button mat-raised-button>
+<button  mat-raised-button (click)="salir()">
     <mat-icon>logout</mat-icon>
     CERRAR SESION
 </button>
