Se vincula la api con los metodos del abm

--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -25,6 +25,17 @@
     <mat-icon>logout</mat-icon>
     CERRAR SESION
 </button>
+<div  class="bottom-div text-center">
+  <!-- Contenido del div en la parte inferior -->
+  <p><strong>{{rolUsuario$ | async}} </strong></p>
+        <p>
+          
+          <br />
+          {{ nombreUsuario$ | async }}
+          <br />
+          {{ correoUsuario$ | async }}
+        </p>
+</div>
 
   
 
