--- a/src/app/dashboard/components/sidebar/sidebar.component.scss
+++ b/src/app/dashboard/components/sidebar/sidebar.component.scss
@@ -10,3 +10,10 @@ mat-list{
       font-weight: 500;
     }
 }
+.bottom-div {
+  position: absolute;
+  bottom: 0;
+  width: 100%; /* O ajusta el ancho según tus necesidades */
+  background-color: #f0f0f0; /* Color de fondo opcional */
+  padding: 10px; /* Espaciado opcional */
+}
