--- a/src/app/dashboard/pages/alumnos/components/alumnos-listado/alumnos-listado.component.html
+++ b/src/app/dashboard/pages/alumnos/components/alumnos-listado/alumnos-listado.component.html
@@ -2,27 +2,27 @@
 
     <!-- id Column -->
     <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
+        <th mat-header-cell *matHeaderCellDef> ID </th>
         <td mat-cell *matCellDef="let alumno"> {{alumno.id}} </td>
     </ng-container>
 
     <!-- fullname Column -->
     <ng-container matColumnDef="fullName">
-        <th mat-header-cell *matHeaderCellDef> Nombre Completo</th>
+        <th mat-header-cell *matHeaderCellDef> NOMBRE COMPLETO</th>
         <td mat-cell *matCellDef="let alumno"> {{alumno | fullName:'uppercase'}} </td>
     </ng-container>
 
 
     <!-- email Column -->
     <ng-container matColumnDef="correo">
-        <th mat-header-cell *matHeaderCellDef> Correo </th>
-        <td mat-cell *matCellDef="let alumno"> {{alumno.correo}} </td>
+        <th mat-header-cell *matHeaderCellDef class="text-center"> CORREO </th>
+        <td mat-cell *matCellDef="let alumno" class="text-center"> {{alumno.correo}} </td>
     </ng-container>
 
     <!-- events Column -->
     <ng-container matColumnDef="opciones" >
-        <th mat-header-cell *matHeaderCellDef> Acciones </th>
-        <td mat-cell *matCellDef="let alumno" class="acciones">
+        <th mat-header-cell *matHeaderCellDef class="text-center"> ACCIONES </th>
+        <td mat-cell *matCellDef="let alumno" class="acciones text-center">
             <button (click)="detailAlumno(alumno.id)" mat-icon-button color="warn">
                 <mat-icon class="mat-icon">visibility</mat-icon>
               </button>
