Arreglando un poquito el home

--- a/src/app/dashboard/components/sidebar/sidebar.component.html
+++ b/src/app/dashboard/components/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@
     <mat-icon>logout</mat-icon>
     CERRAR SESION
 </button>
-<div  class="bottom-div text-center">
+<div  class=" contenedor-usuario text-center">
   <!-- Contenido del div en la parte inferior -->
   <p><strong>{{rolUsuario$ | async}} </strong></p>
         <p>
