--- a/src/app/dashboard/components/sidebar/sidebar.component.scss
+++ b/src/app/dashboard/components/sidebar/sidebar.component.scss
@@ -10,10 +10,11 @@ mat-list{
       font-weight: 500;
     }
 }
-.bottom-div {
+.contenedor-usuario {
   position: absolute;
-  bottom: 0;
-  width: 100%; /* O ajusta el ancho según tus necesidades */
-  background-color: #f0f0f0; /* Color de fondo opcional */
-  padding: 10px; /* Espaciado opcional */
+  color: white;
+  bottom: 100px;
+  width: 200px; 
+  background-color: #171515; 
+  padding: 10px; 
 }
