--- a/src/app/dashboard/pages/home/home.component.html
+++ b/src/app/dashboard/pages/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+
+<div class="container">
+    <h1 class="title">Bienvenido a nuestra academia</h1>
+    <p class="senteses">¡Embárcate en una emocionante aventura espacial a bordo de nuestras naves futuristas!</p>
+  
+    <div class="image-container">
+      <img src="../../../../assets/img/escuela-especial.jpg" alt="Imagen academia" class="academia-image">
+    </div>
+  
+    <p class="reseña">Fundada en el año 2050, nuestra academia espacial te ofrece la oportunidad de explorar el cosmos y descubrir nuevos horizontes.</p>
+  </div>
