--- a/src/app/dashboard/pages/profesores/components/profesores-listado/profesores-listado.component.html
+++ b/src/app/dashboard/pages/profesores/components/profesores-listado/profesores-listado.component.html
@@ -1,5 +1,5 @@
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table " matSort  >
+<table mat-table [dataSource]="dataSource" class=" mat-table mat-elevation-z8 demo-table " matSort  >
     <!-- id Column -->
     <ng-container matColumnDef="id" >
         <th mat-header-cell *matHeaderCellDef> Id </th>
