--- a/src/app/dashboard/pages/cursos/components/cursos-listado/cursos-listado.component.html
+++ b/src/app/dashboard/pages/cursos/components/cursos-listado/cursos-listado.component.html
@@ -1,3 +1,5 @@
+
+
 <table  mat-table [dataSource]="listaCursos" class="mat-table mat-elevation-z8" matSort>
 
     <!-- id Column -->
@@ -32,10 +34,10 @@
     <ng-container matColumnDef="opciones" >
         <th mat-header-cell *matHeaderCellDef>ACCIONES</th>
         <td mat-cell *matCellDef="let curso" class="acciones">
-            <button mat-icon-button (click)="editarCurso.emit(curso)">
+            <button *ngIf="userRole != 'USUARIO'" mat-icon-button (click)="editarCurso.emit(curso)">
                 <mat-icon color="warn">edit</mat-icon>
             </button>
-            <button mat-icon-button (click)="eliminarCurso.emit(curso.id)">
+            <button *ngIf="userRole != 'USUARIO'" mat-icon-button (click)="eliminarCurso.emit(curso.id)">
                 <mat-icon color="warn">delete</mat-icon></button>
         </td>
     </ng-container>
